@@ -26,7 +26,7 @@
 
 #include "_libdwarf.h"
 
-ELFTC_VCSID("$Id: libdwarf_arange.c 2983 2014-02-09 00:24:31Z kaiwang27 $");
+ELFTC_VCSID("$Id: libdwarf_arange.c 3029 2014-04-21 23:26:02Z kaiwang27 $");
 
 void
 _dwarf_arange_cleanup(Dwarf_Debug dbg)
@@ -67,7 +67,7 @@ _dwarf_arange_init(Dwarf_Debug dbg, Dwarf_Error *error)
 		return (DW_DLE_NONE);
 
 	if (!dbg->dbg_info_loaded) {
-		ret = _dwarf_info_load(dbg, 1, error);
+		ret = _dwarf_info_load(dbg, 1, 1, error);
 		if (ret != DW_DLE_NONE)
 			return (ret);
 	}
