@@ -1,6 +1,6 @@
 /*-
  * Copyright (c) 2007 John Birrell (jb@freebsd.org)
- * Copyright (c) 2010,2011 Kai Wang
+ * Copyright (c) 2010,2011,2014 Kai Wang
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -27,7 +27,7 @@
 
 #include "_libdwarf.h"
 
-ELFTC_VCSID("$Id: libdwarf_info.c 2942 2013-05-04 23:03:54Z kaiwang27 $");
+ELFTC_VCSID("$Id: libdwarf_info.c 3032 2014-05-02 11:02:41Z kaiwang27 $");
 
 int
 _dwarf_info_first_cu(Dwarf_Debug dbg, Dwarf_Error *error)
@@ -46,11 +46,37 @@ _dwarf_info_first_cu(Dwarf_Debug dbg, Dwarf_Error *error)
 		return (DW_DLE_NO_ENTRY);
 
 	dbg->dbg_info_off = 0;
-	ret = _dwarf_info_load(dbg, 0, error);
+	ret = _dwarf_info_load(dbg, 0, 1, error);
 	if (ret != DW_DLE_NONE)
 		return (ret);
 
 	dbg->dbg_cu_current = STAILQ_FIRST(&dbg->dbg_cu);
+
+	return (DW_DLE_NONE);
+}
+
+int
+_dwarf_info_first_tu(Dwarf_Debug dbg, Dwarf_Error *error)
+{
+	Dwarf_CU tu;
+	int ret;
+
+	assert(dbg->dbg_tu_current == NULL);
+	tu = STAILQ_FIRST(&dbg->dbg_tu);
+	if (tu != NULL) {
+		dbg->dbg_tu_current = tu;
+		return (DW_DLE_NONE);
+	}
+
+	if (dbg->dbg_types_loaded)
+		return (DW_DLE_NO_ENTRY);
+
+	dbg->dbg_types_off = 0;
+	ret = _dwarf_info_load(dbg, 0, 0, error);
+	if (ret != DW_DLE_NONE)
+		return (ret);
+
+	dbg->dbg_tu_current = STAILQ_FIRST(&dbg->dbg_tu);
 
 	return (DW_DLE_NONE);
 }
@@ -73,7 +99,7 @@ _dwarf_info_next_cu(Dwarf_Debug dbg, Dwarf_Error *error)
 		return (DW_DLE_NO_ENTRY);
 	}
 
-	ret = _dwarf_info_load(dbg, 0, error);
+	ret = _dwarf_info_load(dbg, 0, 1, error);
 	if (ret != DW_DLE_NONE)
 		return (ret);
 
@@ -83,7 +109,35 @@ _dwarf_info_next_cu(Dwarf_Debug dbg, Dwarf_Error *error)
 }
 
 int
-_dwarf_info_load(Dwarf_Debug dbg, int load_all, Dwarf_Error *error)
+_dwarf_info_next_tu(Dwarf_Debug dbg, Dwarf_Error *error)
+{
+	Dwarf_CU cu;
+	int ret;
+
+	assert(dbg->dbg_tu_current != NULL);
+	cu = STAILQ_NEXT(dbg->dbg_tu_current, cu_next);
+	if (cu != NULL) {
+		dbg->dbg_tu_current = cu;
+		return (DW_DLE_NONE);
+	}
+
+	if (dbg->dbg_info_loaded) {
+		dbg->dbg_tu_current = NULL;
+		return (DW_DLE_NO_ENTRY);
+	}
+
+	ret = _dwarf_info_load(dbg, 0, 1, error);
+	if (ret != DW_DLE_NONE)
+		return (ret);
+
+	dbg->dbg_tu_current = STAILQ_NEXT(dbg->dbg_tu_current, cu_next);
+
+	return (DW_DLE_NONE);
+}
+
+int
+_dwarf_info_load(Dwarf_Debug dbg, Dwarf_Bool load_all, Dwarf_Bool is_info,
+    Dwarf_Error *error)
 {
 	Dwarf_CU cu;
 	Dwarf_Section *ds;
@@ -93,12 +147,22 @@ _dwarf_info_load(Dwarf_Debug dbg, int load_all, Dwarf_Error *error)
 	uint64_t offset;
 
 	ret = DW_DLE_NONE;
-	if (dbg->dbg_info_loaded)
-		return (DW_DLE_NONE);
 
-	offset = dbg->dbg_info_off;
-	ds = dbg->dbg_info_sec;
-	assert(ds != NULL);
+	if (is_info) {
+		if (dbg->dbg_info_loaded)
+			return (ret);
+		offset = dbg->dbg_info_off;
+		ds = dbg->dbg_info_sec;
+		assert(ds != NULL);
+	} else {
+		if (dbg->dbg_types_loaded)
+			return (ret);
+		offset = dbg->dbg_types_off;
+		ds = dbg->dbg_types_sec;
+		if (ds == NULL)
+			return (DW_DLE_NO_ENTRY);
+	}
+
 	while (offset < ds->ds_size) {
 		if ((cu = calloc(1, sizeof(struct _Dwarf_CU))) == NULL) {
 			DWARF_SET_ERROR(dbg, error, DW_DLE_MEMORY);
@@ -106,6 +170,7 @@ _dwarf_info_load(Dwarf_Debug dbg, int load_all, Dwarf_Error *error)
 		}
 
 		cu->cu_dbg = dbg;
+		cu->cu_is_info = is_info;
 		cu->cu_offset = offset;
 
 		length = dbg->read(ds->ds_data, &offset, 4);
@@ -140,6 +205,15 @@ _dwarf_info_load(Dwarf_Debug dbg, int load_all, Dwarf_Error *error)
 		cu->cu_abbrev_offset_cur = cu->cu_abbrev_offset;
 		cu->cu_pointer_size	 = dbg->read(ds->ds_data, &offset, 1);
 		cu->cu_next_offset	 = next_offset;
+
+		/* .debug_types extra fields. */
+		if (!is_info) {
+			memcpy(cu->cu_type_sig.signature,
+			    (char *) ds->ds_data + offset, 8);
+			offset += 8;
+			cu->cu_type_offset = dbg->read(ds->ds_data, &offset,
+			    dwarf_size);
+		}
 
 		/* Add the compilation unit to the list. */
 		STAILQ_INSERT_TAIL(&dbg->dbg_cu, cu, cu_next);
@@ -178,6 +252,12 @@ _dwarf_info_cleanup(Dwarf_Debug dbg)
 			_dwarf_lineno_cleanup(cu->cu_lineinfo);
 			cu->cu_lineinfo = NULL;
 		}
+		free(cu);
+	}
+
+	STAILQ_FOREACH_SAFE(cu, &dbg->dbg_tu, cu_next, tcu) {
+		STAILQ_REMOVE(&dbg->dbg_cu, cu, _Dwarf_CU, cu_next);
+		_dwarf_abbrev_cleanup(cu);
 		free(cu);
 	}
 }
